add more images

--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
         src="Images/made_by_Nadine_Marfurt-unsplash-image-w600-h600-fitcrop-cropfaces.jpg"
         alt=""
       />
+      <img
+        class="all gfx"
+        src="Images/made_by_Aaron_Burden-unsplash-image-w600-h600-fitcrop-cropfaces.jpg"
+        alt=""
+      />
+      <img
+        class="all web"
+        src="Images/made_by_Alexander_Titukh-unsplash-image-w600-h600-fitcrop-cropfaces.jpg"
+        alt=""
+      />
+      <img
+        class="all app"
+        src="Images/made_by_Nadine_Marfurt-unsplash-image-w600-h600-fitcrop-cropfaces.jpg"
+        alt=""
+      />
     </div>
     <script src="main.js"></script>
   </body>
